@startuml

title __ASSIGNMENT3.APP's Class Diagram__\n

  namespace com.example.assignment3 {
    class com.example.assignment3.BuildConfig {
    }
  }
  

  namespace com.example.assignment3 {
    class com.example.assignment3.ForecastWeatherActivity {
    }
  }
  

  namespace com.example.assignment3 {
    class com.example.assignment3.MainActivity {
    }
  }
  

  namespace com.example.assignment3 {
    class com.example.assignment3.MapsActivity {
    }
  }
  

  com.example.assignment3.ForecastWeatherActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.assignment3.MainActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.assignment3.MapsActivity .up.|> com.google.android.gms.maps.OnMapReadyCallback
  com.example.assignment3.MapsActivity -up-|> androidx.fragment.app.FragmentActivity


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
